beta-0.2: First mobile friendly layout

--- a/app/items/ui/components/StoreLinks.css
+++ b/app/items/ui/components/StoreLinks.css
@@ -1,10 +1,10 @@
 .storeLinks {
   display: grid;
-  grid-template-columns: auto;
   gap: 10px;
   text-align: center;
   width: 100%;
-  align-content: start;
+  max-width: 300px;
+  margin: 0 auto;
 }
 
 .storeLinks .store-name {
