--- a/app/items/ui/styles/item.css
+++ b/app/items/ui/styles/item.css
@@ -1,97 +1,78 @@
 .item-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(min(500px, 100%), 1fr));
+  grid-auto-rows: min-content;
   gap: 20px;
 }
 
 .item {
   display: grid;
-  grid-template-columns: 175px 1fr;
-  column-gap: 20px;
+  grid-template-rows: auto;
+  row-gap: 8px;
+  column-gap: 16px;
   border-radius: 20px;
   border: 2px solid var(--mainColorHex);
-  text-align: left;
   position: relative;
-  grid-auto-rows: min-content;
-  padding: 10px 20px 0 20px;
-  text-decoration: none;
-  box-sizing: border-box;
   transition: all 1s;
-  /* overflow: hidden; */
   padding: 20px;
+  align-items: start;
 }
 
 .item.preview {
   margin-bottom: 20px;
 }
 
-.item-info {
+/* .item-info {
   width: 100%;
   overflow: hidden;
-}
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} */
 
 .itemName {
   text-align: center;
   color: var(--altColorHex);
   font-family: var(--font-crimson-pro);
-  row-gap: 0;
   white-space: nowrap;
   overflow: hidden;
-  position: relative;
   width: 100%;
   text-overflow: ellipsis;
   font-size: 25px;
-  margin-bottom: 10px;
   font-weight: 100;
+  order: -1;
 }
 
 .item-image-container {
-  margin-bottom: 20px;
   text-align: center;
-  height: 175px;
   background: #ffffff;
   border-radius: 8px;
   padding: 20px;
   display: flex;
-  align-items: center;
+  width: 190px;
   justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
 
 .item-image {
   max-width: 150px;
   max-height: 150px;
-  width: auto;
-  height: auto;
   object-fit: contain;
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 4px;
 }
 
-.quantity-limit-radios {
-  display: flex;
-  gap: 1rem;
-}
-
-.quantity-limit-radios div {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.quantity-limit-radios label {
-  cursor: pointer;
-}
-
 .form-group.name-link-input {
   display: grid;
-  grid-template-columns: 30% 1fr;
-  gap: 1rem;
+  grid-template-columns: 1fr;
+  gap: 8px;
 }
 
 .form-group.occasion-quantity-input {
   display: grid;
-  grid-template-columns: 1fr 220px;
-  gap: 1rem;
+  grid-template-columns: 1fr;
+  gap: 8px;
 }
 
 .form-group.name-link-input .form-group,
@@ -102,17 +83,21 @@
 
 .stores-input-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 1rem;
+  grid-template-columns: 1fr;
+  gap: 8px;
 }
 
 .store-input-container {
   border: 1px solid var(--mainColorHex);
   border-radius: 10px;
-  padding: 10px;
+  padding: 8px 16px;
   display: grid;
-  grid-template-columns: 1fr;
-  gap: 1rem;
+  grid-template-columns: 1fr 80px;
+  gap: 8px;
+}
+
+.store-input-container .store-input:last-child {
+  grid-column: span 2;
 }
 
 .edit-button {
@@ -202,3 +187,66 @@
 .position-input::placeholder {
   color: #888;
 }
+
+@media (min-width: 600px) {
+  .store-input-container {
+    grid-template-columns: 1fr 100px;
+  }
+}
+
+@media (min-width: 800px) {
+  .item {
+    grid-template-columns: 190px 1fr;
+    grid-template-rows: 30px 1fr;
+  }
+
+  .item.preview {
+    max-width: 600px;
+  }
+
+  .item-image-container {
+    grid-row: span 2;
+    height: 190px;
+  }
+
+  .itemName {
+    order: 0;
+  }
+}
+
+@media (min-width: 1000px) {
+  .form-group.name-link-input {
+    grid-template-columns: 30% 1fr;
+  }
+  
+  .form-group.occasion-quantity-input {
+    grid-template-columns: 1fr 220px;
+  }
+
+  .stores-input-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1rem;
+  }
+
+  .store-input-container {
+    grid-template-columns: 1fr;
+  }
+  
+  .store-input-container .store-input:last-child {
+    grid-column: span 1;
+  }
+}
+
+@media (min-width: 1200px) {
+  .store-input-container {
+    grid-template-columns: 1fr 100px;
+  }
+  
+  .store-input-container .store-input:last-child {
+    grid-column: span 2;
+  }
+}
+  
+  
+  
