--- a/app/lists/ui/styles/confirm-dialog.css
+++ b/app/lists/ui/styles/confirm-dialog.css
@@ -4,11 +4,11 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 50;
+  z-index: 100;
 }
 
 .confirm-dialog-content {
@@ -16,7 +16,9 @@
   border: 1px solid var(--mainColorHex);
   padding: 1.5rem;
   border-radius: 0.5rem;
-  width: 24rem;
+  max-width: 24rem;
+  width: 80%;
+  z-index: 100;
 }
 
 .confirm-dialog-title {
