--- a/app/ui/styles/button.css
+++ b/app/ui/styles/button.css
@@ -1,16 +1,16 @@
 .btn {
   border-radius: 8px;
-  padding: 15px 25px;
+  padding: 15px;
   border-style: solid;
   border-width: 2px;
   cursor: pointer;
   transition: all 0.2s ease;
   text-decoration: none;
   display: flex;
-  gap: 5px;
+  gap: 8px;
   align-items: center;
   justify-content: center;
-  font-size: 17px;
+  font-size: 15px;
   font-family: var(--font-roboto-condensed);
   font-weight: 500;
 }
@@ -55,3 +55,16 @@
 .nav:hover {
   background-color: transparent;
 }
+
+@media (max-width: 800px) {
+
+  .btn {
+    padding: 15px 20px;
+  }
+
+  .mobile-small {
+    font-size: 14px;
+    padding: 10px 20px;
+  }
+}
+  
