--- a/app/ui/styles/global.css
+++ b/app/ui/styles/global.css
@@ -13,6 +13,12 @@
   }
 }
 
+@media (max-width: 600px) {
+  body [class*="mobile-hide"] {
+    display: none;
+  }
+}
+
 html,
 body {
   max-width: 100vw;
@@ -42,17 +48,18 @@ body {
 .container {
   background-color: var(--background-color);
   position: absolute;
-  top: 8px;
-  left: 400px;
+  top: 150px;
+  left: 8px;
   right: 8px;
-  bottom: 8px;
+  bottom: 70px;
   overflow-y: auto;
-  padding: 40px;
+  padding: 20px;
+  border-radius: 8px;
 }
 
 .header {
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: 1fr;
   gap: 10px;
   margin-bottom: 20px;
 }
@@ -61,21 +68,24 @@ body {
   font-size: 40px;
   font-family: var(--font-crimson-pro);
   font-weight: 100;
+  text-align: center;
 }
 
 .header-buttons {
   display: flex;
   align-items: start;
+  justify-content: center;
   gap: 10px;
 }
 
 .menu {
   position: fixed;
-  top: 28px;
+  top: 8px;
   left: 0;
-  width: 400px;
+  right: 0;
+  height: 150px;
   text-align: center;
-  z-index: 500;
+  z-index: 0;
 }
 
 .logo {
@@ -84,6 +94,7 @@ body {
   stroke-linejoin: round;
   stroke-miterlimit: 2;
   width: 80%;
+  max-width: 300px;
 }
 
 .logo path {
@@ -103,20 +114,10 @@ body {
 /* Navigation Styles */
 .nav-container {
   width: 100%;
-  padding: 1rem;
-  border-right: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.nav-content {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-
-.nav-section {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
+  padding: 8px 16px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 1rem;
 }
 
 .nav-menu {
@@ -135,36 +136,13 @@ body {
   gap: 0.5rem;
 }
 
-.nav-link {
+.user-container {
+  position: fixed;
+  bottom: 0;
   width: 100%;
-  padding: 1rem;
-  border-radius: 0.5rem;
-  font-size: 1rem;
-  font-weight: 500;
-  text-align: center;
-  color: #ffffff;
-  text-decoration: none;
-  background-color: var(--darkColorHex);
-  border: 2px solid var(--darkColorHex);
-  transition: background-color 0.2s ease;
   display: flex;
   align-items: center;
   justify-content: center;
-  cursor: pointer;
-}
-
-.nav-link:hover,
-.nav-link.active {
-  background-color: transparent;
-}
-
-.user-container {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 400px;
-  display: grid;
-  grid-template-columns: 1fr;
   gap: 10px;
   padding: 20px;
 }
@@ -179,4 +157,69 @@ body {
 
 .logout-icon {
   margin-right: 10px;
+}
+
+@media (min-width: 800px) {
+
+  .container {
+    top: 8px;
+    left: 200px;
+    right: 8px;
+    bottom: 8px;
+    padding: 30px;
+  }
+
+  .menu {
+    top: 28px;
+    left: 0;
+    bottom: 8px;
+    width: 200px;
+    height: auto;
+  }
+
+  .logo {
+    width: 80%;
+  }
+
+  .nav-container {
+    grid-template-columns: 1fr;
+  }
+
+  .user-container {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    flex-direction: column;
+    padding: 15px;
+  }
+
+  .header {
+    grid-template-columns: 1fr auto;
+  }
+
+  .header .pageTitle {
+    text-align: left;
+  }
+}
+
+@media (min-width: 1000px) {
+  .container {
+    left: 250px;
+    padding: 30px;
+  }
+
+  .menu {
+    width: 250px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    left: 300px;
+    padding: 40px;
+  }
+
+  .menu {
+    width: 300px;
+  }
 }
