--- a/app/ui/styles/form.css
+++ b/app/ui/styles/form.css
@@ -25,13 +25,12 @@
 /* Form Input */
 .form-input {
   display: flex;
-  height: 2.5rem;
+  font-size: 16px;
   width: 100%;
-  border-radius: 0.375rem;
+  border-radius: 8px;
   border: 1px solid var(--mainColorHex);
   background: transparent;
   padding: 0.5rem 0.75rem;
-  font-size: 0.875rem;
   transition:
     border-color 0.15s,
     box-shadow 0.15s;
