--- a/app/items/ui/components/StoreLinks.css
+++ b/app/items/ui/components/StoreLinks.css
@@ -29,7 +29,7 @@
   top: 50%;
   left: 50%;
   background-color: var(--darkColorHex);
-  border: 1px solid var(--mainColorHex);
+  border: 1px solid var(--primary-color);
   padding: 1.5rem;
   border-radius: 0.5rem;
   width: 24rem;
