--- a/app/lists/ui/styles/list-loading.css
+++ b/app/lists/ui/styles/list-loading.css
@@ -18,7 +18,7 @@
   width: 100%;
   border-radius: 20px;
   background: transparent;
-  border: 1px solid var(--mainColorHex);
+  border: 1px solid var(--primary-color);
   padding: 0.5rem 0.75rem;
   font-size: 0.875rem;
   transition: border-color 0.15s;
@@ -40,11 +40,10 @@
   height: 2.5rem;
   width: 100%;
   border-radius: 20px;
-  background: #111111;
+  background: var(--secondary-background-color);
   padding: 0.5rem 0.75rem;
   font-size: 0.875rem;
   transition: border-color 0.15s;
-  color: #ffffff;
 }
 
 @keyframes pulse {
