--- a/app/ui/styles/form.css
+++ b/app/ui/styles/form.css
@@ -18,7 +18,7 @@
   font-size: 1.15rem;
   font-weight: 100;
   font-family: var(--font-crimson-pro);
-  color: #ffffff;
+  color: var(--primary-text-color);
   text-align: left;
 }
 
@@ -28,13 +28,13 @@
   font-size: 16px;
   width: 100%;
   border-radius: 8px;
-  border: 1px solid var(--mainColorHex);
+  border: 1px solid var(--primary-color);
   background: transparent;
   padding: 0.5rem 0.75rem;
   transition:
     border-color 0.15s,
     box-shadow 0.15s;
-  color: #ffffff;
+  color: var(--primary-text-color);
 }
 
 .form-input:hover {
@@ -49,7 +49,7 @@
 .form-error {
   font-size: 0.75rem;
   font-weight: 500;
-  color: #ef4444; /* text-red-500 */
+  color: var(--danger-color);
 }
 
 /* Loading Spinner */
