--- a/app/ui/styles/select.css
+++ b/app/ui/styles/select.css
@@ -1,24 +1,24 @@
 .react-select__control {
   background-color: transparent;
-  border: 1px solid var(--mainColorHex);
+  border: 1px solid var(--primary-color);
   outline: none;
   box-shadow: none;
-  color: #ffffff;
+  color: var(--primary-text-color);
   cursor: pointer;
 }
 
 .react-select__control--is-focused,
 .react-select__control:hover {
-  border-color: var(--altColorHex);
+  border-color: var(--secondary-color);
 }
 
 .react-select__input-container,
 .react-select__single-value {
-  color: #ffffff;
+  color: var(--primary-text-color);
 }
 
 .react-select__multi-value {
-  background-color: var(--mainColorHex);
+  background-color: var(--primary-color);
   color: #ffffff;
 }
 
@@ -29,25 +29,24 @@
 
 .react-select__multi-value__remove:hover {
   background-color: #ffffff;
-  color: var(--mainColorHex);
+  color: var(--primary-color);
   margin-left: 2px;
 }
 
 .react-select__menu {
-  background-color: var(--darkColorHex);
-  border: 1px solid var(--altColorHex);
+  background-color: var(--background-color);
+  border: 1px solid var(--primary-color);
   cursor: pointer;
 }
 
 .react-select__option {
   cursor: pointer;
+  color: var(--primary-text-color);
 }
 
-.react-select__option--is-selected {
-  background-color: var(--mainColorHex);
-}
-
+.react-select__option--is-selected,
 .react-select__option:hover,
 .react-select__option--is-focused {
-  background-color: var(--altColorHex);
+  background-color: var(--primary-color);
+  color: #ffffff;
 }
