--- a/app/lists/ui/styles/confirm-dialog.css
+++ b/app/lists/ui/styles/confirm-dialog.css
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: var(--transparent-overlay);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -12,7 +12,7 @@
 }
 
 .confirm-dialog-content {
-  background-color: var(--darkColorHex);
+  background-color: var(--background-color);
   border: 1px solid var(--primary-color);
   padding: 1.5rem;
   border-radius: 0.5rem;
