--- a/app/ui/styles/global.css
+++ b/app/ui/styles/global.css
@@ -15,6 +15,7 @@
   --primary-text-color: var(--primary-color);
   --contrast-text-color: var(--light-color);
   --danger-text-color: var(--danger-color);
+  --transparent-overlay: rgba(0, 0, 0, 0.7);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,6 +26,7 @@
     --primary-text-color: var(--light-color);
     --contrast-text-color: var(--primary-color);
     --danger-text-color: var(--light-color);
+    --transparent-overlay: rgba(0, 0, 0, 0.7);
   }
 }
 
