--- a/app/ui/styles/global.css
+++ b/app/ui/styles/global.css
@@ -40,6 +40,7 @@ html,
 body {
   width: 100vw;
   overflow-x: hidden;
+  color: var(--primary-text-color);
 }
 
 body {
@@ -120,7 +121,7 @@ body {
   right: 0;
   padding-top: 8px;
   height: 150px;
-  text-align: center;
+  text-align: left;
   z-index: 50;
   background-image: linear-gradient(
     120deg,
@@ -137,18 +138,15 @@ body {
   stroke-linejoin: round;
   stroke-miterlimit: 2;
   width: 80%;
-  max-width: 300px;
+  max-width: 250px;
+  margin-left: 20px;
 }
 
 .logo path {
   fill-rule: nonzero;
 }
 
-.logo.name {
-  fill: #ffffff;
-}
-
-.logo.title {
+.logo .title {
   fill: none;
   stroke: #ffffff;
   stroke-width: 5px;
@@ -177,33 +175,6 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-}
-
-.user-container {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  padding: 8px;
-  background-image: linear-gradient(
-    120deg,
-    var(--primary-color),
-    var(--secondary-color)
-  );
-  background-attachment: fixed;
-  box-sizing: border-box;
-}
-
-.user-container .user-name {
-  font-size: 1rem;
-  font-family: var(--font-crimson-pro);
-  font-weight: 100;
-  color: #ffffff;
-  text-align: center;
 }
 
 .logout-icon {
@@ -269,14 +240,6 @@ body {
 
   .nav-container {
     grid-template-columns: 1fr;
-  }
-
-  .user-container {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    flex-direction: column;
-    padding: 15px;
   }
 
   .header {
