--- a/app/ui/styles/global.css
+++ b/app/ui/styles/global.css
@@ -18,7 +18,7 @@
   --transparent-overlay: rgba(0, 0, 0, 0.7);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background-color: var(--dark-color);
     --secondary-background-color: var(--secondary-dark-color);
@@ -28,10 +28,16 @@
     --danger-text-color: var(--light-color);
     --transparent-overlay: rgba(0, 0, 0, 0.7);
   }
-}
+} */
 
 @media (max-width: 600px) {
   body [class*="mobile-hide"] {
+    display: none;
+  }
+}
+
+@media (max-width: 800px) {
+  body [class*="nav-hide"] {
     display: none;
   }
 }
@@ -69,22 +75,22 @@ body {
 /* This is the visible container with rounded corners */
 .container {
   position: absolute;
-  top: 150px;
-  left: 8px;
-  right: 8px;
+  top: 158px;
+  left: 16px;
+  right: 16px;
   z-index: 1;
   padding: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 36px;
 }
 
 /* This is the background that stays fixed */
 .container::before {
   content: '';
   position: fixed;
-  top: 150px;
-  left: 8px;
-  right: 8px;
-  bottom: 8px;
+  top: 158px;
+  left: 16px;
+  right: 16px;
+  bottom: 16px;
   background-color: var(--background-color);
   border-radius: 8px;
   z-index: -1;
@@ -92,27 +98,25 @@ body {
   pointer-events: none;
 }
 
-/* .bottom-line {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 8px;
-  background-color: var(--primary-color);
-  background-image: linear-gradient(
-    120deg,
-    var(--primary-color),
-    var(--secondary-color)
-  );
-  background-attachment: fixed;
-} */
+.container:has(.no-user) {
+  top: 93px;
+}
+
+.container:has(.no-user)::before {
+  top: 93px;
+}
 
 .header {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 8px;
   color: var(--primary-text-color);
+}
+
+.header.saved-lists {
+  margin-top: 16px;
 }
 
 .header .pageTitle {
@@ -128,7 +132,7 @@ body {
 
 .header-buttons {
   display: flex;
-  align-items: start;
+  align-items: center;
   justify-content: center;
   gap: 10px;
 }
@@ -138,8 +142,7 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  padding-top: 8px;
-  height: 150px;
+  padding: 16px;
   text-align: left;
   z-index: 50;
   background-image: linear-gradient(
@@ -149,6 +152,10 @@ body {
   );
   background-attachment: fixed;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  gap: 16px;
+  align-items: center;
 }
 
 .menu::after {
@@ -157,7 +164,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  height: 8px;
+  height: 16px;
   background-color: var(--primary-color);
   background-image: linear-gradient(
     120deg,
@@ -172,9 +179,8 @@ body {
   clip-rule: evenodd;
   stroke-linejoin: round;
   stroke-miterlimit: 2;
-  width: 80%;
+  width: 100%;
   max-width: 250px;
-  margin-left: 20px;
 }
 
 .logo path {
@@ -190,10 +196,12 @@ body {
 /* Navigation Styles */
 .nav-container {
   width: 100%;
-  padding: 8px 16px;
+  max-width: 600px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 1rem;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 16px;
+  order: 2;
+  grid-column: span 2;
 }
 
 .nav-menu {
@@ -240,44 +248,41 @@ body {
   font-size: 18px;
 }
 
-@media (min-width: 1200px) {
-  body {
-    overflow: hidden;
-  }
-
-  .container {
-    top: 8px;
-    left: 250px;
-    right: 8px;
-    bottom: 8px;
-    padding: 30px;
-    position: fixed;
-    overflow-y: auto;
-    border-radius: 8px;
-    background-color: var(--background-color);
-  }
-
-  .container::before {
-    display : none;
-  }
-
+@media (min-width: 600px) {
   .menu {
-    top: 28px;
-    left: 0;
-    bottom: 8px;
-    width: 250px;
-    height: auto;
-  }
-
-  .logo {
-    width: 80%;
+    grid-template-columns: 250px 1fr 45px;
   }
 
   .nav-container {
-    grid-template-columns: 1fr;
+    order: 0;
+    grid-column: span 1;
   }
 
+  .container {
+    top: 92px;
+  }
+
+  .container::before {
+    top: 92px;
+  }
+}
+
+@media (min-width: 1200px) {
+
+  /* .container {
+    position: fixed;
+    bottom: 16px;
+    background-color: var(--background-color);
+    overflow-y: auto;
+    border-radius: 8px;
+  }
+
+  .container::before {
+    display: none;
+  } */
+
   .header {
+    display: grid;
     grid-template-columns: 1fr auto;
   }
 
@@ -290,13 +295,11 @@ body {
   }
 }
 
-@media (min-width: 1400px) {
-  .container {
-    left: 300px;
-    padding: 40px;
-  }
+.container:has(.list-details-container) {
+  bottom: 0;
+  padding: 0;
+}
 
-  .menu {
-    width: 300px;
-  }
+.container:has(.list-details-container)::before {
+  display: none;
 }
