beta-0.5: Local drag and drop reordering

--- a/app/(main)/items/ui/components/StoreLinks.css
+++ b/app/(main)/items/ui/components/StoreLinks.css
@@ -7,6 +7,11 @@
   margin: 0 auto;
 }
 
+.drag-active .storeLinks,
+.item-drag-overlay .storeLinks {
+  display: none;
+}
+
 .storeLinks .store-name {
   font-weight: 200;
 }
