--- a/app/ui/styles/form.css
+++ b/app/ui/styles/form.css
@@ -10,7 +10,8 @@
 .form-group {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 4px;
+  grid-template-rows: auto 1fr;
+  gap: 8px;
 }
 
 /* Form Label */
@@ -33,7 +34,8 @@
 }
 
 /* Form Input */
-.form-input {
+.form-input,
+.price-input-container {
   display: flex;
   font-size: 16px;
   width: 100%;
@@ -46,10 +48,29 @@
     box-shadow 0.15s;
   color: var(--primary-text-color);
   min-height: 37px;
+  align-items: center;
+}
+
+.price-input-container .form-input {
+  border: none;
+  padding-left: 0;
+}
+
+.price-input-container {
+  padding: 0;
+  padding-left: 8px;
 }
 
 .form-input-error {
   border-color: var(--danger-color);
+  border-width: 2px;
+}
+
+.input-error {
+  font-size: 13px;
+  font-weight: 600;
+  color: var(--danger-color);
+  text-align: right;
 }
 
 .form-input:hover {
@@ -60,23 +81,12 @@
   outline: none;
 }
 
-/* .price-input {
-  margin-left: 10px;
-} */
-
-.price-input-container {
-  display: flex;
-  align-items: center;
-  color: var(--primary-text-color);
-}
-
 /* Form Error */
 .form-error {
   font-size: 12px;
   font-weight: 400;
   color: var(--danger-color);
   text-align: right;
-  margin-left: 4px;
 }
 
 /* Loading Spinner */
@@ -105,4 +115,98 @@
 .button-group {
   display: flex;
   justify-content: center;
+}
+
+.stores-input-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 16px;
+}
+
+.store-input-container {
+  border: 1px solid var(--primary-color);
+  border-radius: 10px;
+  padding: 16px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 8px;
+}
+
+.store-input-wrapper {
+  position: relative;
+}
+
+.remove-store-btn {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background-color: var(--primary-text-color);
+    border: 1px solid var(--primary-text-color);
+    color: var(--contrast-text-color);
+    border-radius: 50%;
+    width: 34px;
+    height: 34px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.remove-store-btn:hover {
+    background-color: var(--contrast-text-color);
+    color: var(--primary-text-color);
+}
+
+.add-store-btn {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    border: none;
+    background-color: transparent;
+    color: var(--secondary-color);
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.add-store-icon {
+  border: 1px solid var(--secondary-color);
+  border-radius: 50%;
+  padding: 2px;
+}
+
+.add-store-btn:hover {
+    color: var(--primary-color);
+}
+
+.add-store-btn:hover .add-store-icon {
+    border-color: var(--primary-color);
+}
+
+@media (min-width: 800px) {
+
+  .item-form-container {
+    display: grid;
+    grid-template-columns: 240px 1fr;
+    gap: 16px;
+  }
+
+  .item.preview {
+    max-width: 600px;
+  }
+
+  .itemName {
+    order: 0;
+  }
+}
+
+@media (min-width: 1200px) {
+  .form-group.name-link-input {
+    grid-template-columns: 30% 1fr;
+  }
+  
+  .form-group.occasion-quantity-input {
+    grid-template-columns: 1fr 220px;
+  }
 }
