--- a/app/ui/styles/global.css
+++ b/app/ui/styles/global.css
@@ -58,7 +58,15 @@ body {
   height: 100vh;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-  /* Background for the page */
+}
+
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   background-color: var(--primary-color);
   background-image: linear-gradient(
     120deg,
@@ -66,6 +74,7 @@ body {
     var(--secondary-color)
   );
   background-attachment: fixed;
+  pointer-events: none;
 }
 
 * {
@@ -91,14 +100,13 @@ body {
 .container::before {
   content: '';
   position: fixed;
-  top: 153px;
+  top: 149px;
   left: 16px;
   right: 16px;
   bottom: 16px;
   background-color: var(--background-color);
   border-radius: 8px;
   z-index: -1;
-  /* Ensure it's behind the content */
   pointer-events: none;
   max-width: var(--max-width);
   margin: 0 auto;
