--- a/app/(main)/items/ui/styles/item.css
+++ b/app/(main)/items/ui/styles/item.css
@@ -1,6 +1,6 @@
 .item-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(min(350px, 100%), 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(min(240px, 100%), 1fr));
   grid-auto-rows: min-content;
   gap: 20px;
 }
@@ -30,7 +30,7 @@
 
 .sortable-item {
   display: grid;
-  grid-template-columns: 20px 1fr;
+  grid-template-columns: 30px 1fr;
   align-items: center;
   gap: 4px;
 }
@@ -48,56 +48,92 @@
   cursor: grab;
 }
 
+.drag-handle-icon {
+    transform: translate(-5px, -5px);
+}
+
 .drag-handle:active,
 body:has(.item-drag-overlay) {
   cursor: grabbing;
 }
 
+
+.item-container {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 50px;
+  height: 100%;
+}
+
 .item {
   background-color: var(--background-color);
   display: grid;
-  grid-template-rows: 150px 30px 1fr;
+  grid-template-rows: 200px auto;
   row-gap: 8px;
   column-gap: 16px;
-  border-radius: 20px;
+  border-radius: 20px 20px 0 0;
   border: 2px solid var(--primary-color);
+  border-bottom: none;
   position: relative;
   transition: all 1s;
-  padding: 20px;
-  align-items: start;
-  height: 100%;
+  align-items: end;
+  overflow: hidden;
+}
+
+.item-container.owner {
+    grid-template-rows: 1fr;
+}
+
+.item-container.owner .item {
+    border-radius: 20px;
+    border: 2px solid var(--primary-color);
 }
 
 .item.preview {
   margin-bottom: 20px;
+  border-width: 1px;
+  height: min-content;
 }
 
 .item.purchased {
   border-color: var(--secondary-color);
-  background-color: var(--secondary-color);
+  border-width: 2px;
 }
 
 .item.purchased .item-image-container {
-  opacity: 0.5;
+  opacity: 0.25;
 }
 
 .item.purchased .itemName {
-  opacity: 0.5;
-  color: #ffffff;
+  opacity: 0.25;
+  /* color: #ffffff; */
 }
 
-/* .item.purchased .btn {
-  opacity: 0.5;
-} */
+.item.purchased .storeLinks {
+  opacity: 0.25;
+}
+
+.purchase {
+  border-radius: 0 0 20px 20px;
+}
+
+.item-info {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr;
+  gap: 8px;
+  align-items: end;
+  padding: 10px;
+  padding-top: 0;
+}
 
 .itemName {
-  text-align: center;
+  text-align: left;
   color: var(--secondary-color);
   font-family: var(--font-crimson-pro);
-  white-space: nowrap;
-  overflow: hidden;
   width: 100%;
-  text-overflow: ellipsis;
   font-size: 25px;
   font-weight: 100;
 }
@@ -107,19 +143,17 @@ body:has(.item-drag-overlay) {
   background: #ffffff;
   border-radius: 8px;
   display: flex;
-  width: 150px;
-  height: 150px;
+  width: 100%;
+  height: 200px;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
 }
 
 .item-image {
-  max-width: 150px;
-  max-height: 150px;
-  object-fit: contain;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: 4px;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
 
 .form-group.name-link-input {
@@ -140,32 +174,13 @@ body:has(.item-drag-overlay) {
   grid-template-columns: 1fr;
 }
 
-.stores-input-container {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 8px;
-}
-
-.store-input-container {
-  border: 1px solid var(--primary-color);
-  border-radius: 10px;
-  padding: 8px 16px;
-  display: grid;
-  grid-template-columns: 1fr 80px;
-  gap: 8px;
-}
-
-.store-input-container .store-input:last-child {
-  grid-column: span 2;
-}
-
 .edit-button {
   position: absolute;
   top: -10px;
   right: -10px;
-  background-color: var(--primary-text-color);
-  border: 1px solid var(--primary-text-color);
-  color: var(--contrast-text-color);
+  background-color: #ffffff;
+  border: 2px solid var(--primary-text-color);
+  color: var(--primary-text-color);
   border-radius: 50%;
   width: 34px;
   height: 34px;
@@ -177,8 +192,8 @@ body:has(.item-drag-overlay) {
 }
 
 .edit-button:hover {
-  background-color: var(--contrast-text-color);
-  color: var(--primary-text-color);
+  background-color: var(--primary-text-color);
+  color: #ffffff;
 }
 
 .item.preview .edit-button {
@@ -249,56 +264,6 @@ body:has(.item-drag-overlay) {
 
 .position-input::placeholder {
   color: #888;
-}
-
-@media (min-width: 600px) {
-  .store-input-container {
-    grid-template-columns: 1fr 100px;
-  }
-}
-
-@media (min-width: 800px) {
-  /* .item {
-    grid-template-columns: 190px 1fr;
-    grid-template-rows: 30px 1fr;
-  } */
-
-  .item.preview {
-    max-width: 600px;
-  }
-
-  /* .item-image-container {
-    grid-row: span 2;
-    height: 190px;
-  } */
-
-  .itemName {
-    order: 0;
-  }
-}
-
-@media (min-width: 1200px) {
-  .form-group.name-link-input {
-    grid-template-columns: 30% 1fr;
-  }
-  
-  .form-group.occasion-quantity-input {
-    grid-template-columns: 1fr 220px;
-  }
-
-  .stores-input-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 1rem;
-  }
-
-  .store-input-container {
-    grid-template-columns: 1fr 100px;
-  }
-  
-  .store-input-container .store-input:last-child {
-    grid-column: span 2;
-  }
 }
   
   
